--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -1,6 +1,6 @@
 <meta charset='utf-8'>
 <!--
-file:///home/ywsing/suite/src/main/html/five-in-a-row.html
+file:///home/ywsing/suite/src/main/html/five-in-a-row-hex.html
 -->
 <!DOCTYPE html>
 <html>
@@ -50,16 +50,16 @@ let viewCell = rd.parse(`
 	</span>
 `);
 
+let viewCells = rd.parse(`
+	<rd_for>
+		<rd_component v='viewCell' />
+	</rd_for>
+`);
+
 let view = rd.parse(`
 	<span>
 		<rd_map v='vm.nextstones'>
-			<table style='user-select: none;'>
-				<tr>
-					<rd_for>
-						<td><rd_component v='viewCell' /></td>
-					</rd_for>
-				</tr>
-			</table>
+			<rd_component v='viewCells' />
 		</rd_map>
 		<p/>
 		<rd_map v='vm.board'>
@@ -78,9 +78,7 @@ let view = rd.parse(`
 							'
 						></span>
 					</rd_if>
-					<rd_for>
-						<rd_component v='viewCell' />
-					</rd_for>
+					<rd_component v='viewCells' />
 				</div>
 			</rd_for>
 		</rd_map>
@@ -136,6 +134,11 @@ let search = (xy0, xyx, isMovable) => {
 let freeze = false; // if we are accepting game inputs
 
 let mutate = (() => {
+	let for_xy = f => {
+		for (let x = 0; x < size; x++)
+			for (let y = 0; y < size; y++)
+				f(x, y);
+	};
 	let setcell = (vm, vmc1) =>  {
 		let vmt0 = vm.board;
 		let vmr0 = vmt0[vmc1.x];
@@ -145,22 +148,6 @@ let mutate = (() => {
 		return { ...vm, board: vmt1 };
 	};
 	return {
-		setcell,
-		emptycount: vm => {
-			let n = 0;
-			for (let x = 0; x < size; x++)
-				for (let y = 0; y < size; y++)
-					n += vm.board[x][y].d != null ? 0 : 1;
-			return n;
-		},
-		lose: vm => {
-			freeze = true;
-			for (let x = 0; x < size; x++)
-				for (let y = 0; y < size; y++)
-					if (vm.board[x][y].d == null)
-						vm = setcell(vm, { ...vm.board[x][y], d: -1 });
-			return vm;
-		},
 		drop: (vm, stones) => {
 			if (stones.length <= mutate.emptycount(vm))
 				for (let stone of stones)
@@ -176,6 +163,21 @@ let mutate = (() => {
 				vm = mutate.lose(vm);
 			return vm;
 		},
+		emptycount: vm => {
+			let n = 0;
+			for_xy((x, y) => n += vm.board[x][y].d != null ? 0 : 1);
+			return n;
+		},
+		for_xy,
+		lose: vm => {
+			freeze = true;
+			for_xy((x, y) => {
+				if (vm.board[x][y].d == null)
+					vm = setcell(vm, { ...vm.board[x][y], d: -1 });
+			});
+			return vm;
+		},
+		setcell,
 	};
 })();
 
@@ -218,25 +220,25 @@ let check = () => {
 	let isFiveInARow = false;
 	if (!freeze)
 		vw.change(vm => {
-			for (let x = 0; x < size; x++)
-				for (let y = 0; y < size; y++)
-					for (let [dx, dy] of [[0, 1], [1, 0], [-1, 1], [1, 1],]) {
-						let step = 0;
-						let x1, y1;
-						while (true
-							&& (x1 = x + step * dx) != null
-							&& (y1 = y + step * dy) != null
-							&& 0 <= x1 && x1 < size && 0 <= y1 && y1 < size
-							&& vm.board[x][y].d != null
-							&& vm.board[x][y].d == vm.board[x1][y1].d) step++;
-						if (5 <= step) {
-							isFiveInARow = true;
-							for (let i = 0; i < step; i++)
-								vm = mutate.setcell(vm, { ...vm.board[x + i * dx][y + i * dy], d: null, });
-							score += step;
-							document.title = `${score} - Five in a row`;
-						}
+			mutate.for_xy((x, y) => {
+				for (let [dx, dy] of [[0, 1], [1, 0], [-1, 1], [1, 1],]) {
+					let step = 0;
+					let x1, y1;
+					while (true
+						&& (x1 = x + step * dx) != null
+						&& (y1 = y + step * dy) != null
+						&& 0 <= x1 && x1 < size && 0 <= y1 && y1 < size
+						&& vm.board[x][y].d != null
+						&& vm.board[x][y].d == vm.board[x1][y1].d) step++;
+					if (5 <= step) {
+						isFiveInARow = true;
+						for (let i = 0; i < step; i++)
+							vm = mutate.setcell(vm, { ...vm.board[x + i * dx][y + i * dy], d: null, });
+						score += step;
+						document.title = `${score} - Five in a row`;
 					}
+				}
+			});
 			return vm;
 		});
 	return isFiveInARow;
