--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -65,19 +65,17 @@ let view = rd.parse(`
 		<rd_map v='vm.board'>
 			<rd_for>
 				<div>
-					<rd_if v='vm[0].x % 2 == 0'>
-						<span
-							style='
-								display: inline-block;
-								font-size: 25px;
-								height: 40px;
-								margin: 2px 0px 2px 0px;
-								text-align: center;
-								vertical-align: middle;
-								width: 18px;
-							'
-						></span>
-					</rd_if>
+					<span
+						style='
+							display: inline-block;
+							font-size: 25px;
+							height: 40px;
+							margin: 2px 0px 2px 0px;
+							text-align: center;
+							vertical-align: middle;
+							width: { vm[0].x * 18 }px;
+						'
+					></span>
 					<rd_component v='viewCells' />
 				</div>
 			</rd_for>
@@ -120,7 +118,7 @@ let search = (xy0, xyx, isMovable) => {
 		let { x, y, } = todo;
 		let k = key(todo);
 		if (!dones.hasOwnProperty(k)) {
-			let neighbours = [[-1, 0], [+1, 0], [0, -1], [0, +1],]
+			let neighbours = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, 1,], [1, -1,],]
 				.map(([dx, dy]) => ({ x: x + dx, y: y + dy, prev: todo, }))
 				.filter(({ x, y }) => 0 <= x && x < size && 0 <= y && y < size && isMovable(x, y));
 			todos.push(...neighbours);
@@ -221,7 +219,7 @@ let check = () => {
 	if (!freeze)
 		vw.change(vm => {
 			mutate.for_xy((x, y) => {
-				for (let [dx, dy] of [[0, 1], [1, 0], [-1, 1], [1, 1],]) {
+				for (let [dx, dy] of [[0, -1], [-1, 0], [-1, +1], [+1, +1],]) {
 					let step = 0;
 					let x1, y1;
 					while (true
