--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -92,8 +92,8 @@ let view = rd.parse(`
 	</span>
 `);
 
-let eatdirs = [[0, -1], [-1, 0], [-1, +1], [+1, +1],];
-let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, 1,], [1, -1,],];
+let eatdirs = [[0, -1], [-1, 0], [-1, +1], ];
+let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, +1,], [+1, -1,], ];
 
 const usp = new URLSearchParams(window.location.search);
 const colorsp = usp.get('colors');
