--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -84,7 +84,7 @@ let view = rd.parse(`
 	</span>
 `);
 
-let eatdirs = [[0, -1], [-1, 0], [-1, +1],];
+let eatdirs = [[0, -1], [-1, 0], [-1, +1], [+1, +1],];
 let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1],];
 
 const usp = new URLSearchParams(window.location.search);
