--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -34,8 +34,9 @@ icons[-1] = '💀';
 let viewCell = rd.parse(`
 	<span draggable='true'
 		style='
-			background: { vm.selected ? "#888888" : vm.background ? vm.background : "#DDDDDD" };
+			background: { vm.selected ? "#DDDDDD" : vm.background ? vm.background : "#DDDDDD" };
 			display: table-cell;
+			filter: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
 			font-size: 25px;
 			height: 40px;
 			text-align: center;
@@ -78,7 +79,6 @@ let view = rd.parse(`
 				<rd_for>
 					<p style='font-family: monospace;'>{ vm }</p>
 				</rd_for>
-				<span style='position: fixed; right: 5px; top: 5px'>X</span>
 			</div>
 		</rd_map>
 	</span>
