--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -34,8 +34,9 @@ icons[-1] = '💀';
 let viewCell = rd.parse(`
 	<span draggable='true'
 		style='
-			background: { vm.selected ? "#888888" : vm.background ? vm.background : "#DDDDDD" };
+			background: { vm.background ? vm.background : "#DDDDDD" };
 			display: inline-block;
+			filter: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
 			font-size: 25px;
 			height: 40px;
 			margin: 2px 0px 2px 0px;
