--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -34,7 +34,7 @@ icons[-1] = '💀';
 let viewCell = rd.parse(`
 	<span draggable='true'
 		style='
-			background: { vm.selected ? "#DDDDDD" : vm.background ? vm.background : "#DDDDDD" };
+			background: { vm.background ? vm.background : "#DDDDDD" };
 			display: table-cell;
 			filter: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
 			font-size: 25px;
