--- a/src/main/html/hex0.html
+++ b/src/main/html/hex0.html
@@ -15,35 +15,35 @@ reference: https://jtauber.github.io/articles/css-hexagon.html
 			}
 			.hex {
 				float: left;
-				margin: 0px 0px -26px 3px;
+				margin: 0px 0px -13px 1.5px;
 			}
 			.hex .top {
 				width: 0;
-				border-bottom: 30px solid #FFC48C;
-				border-left: 52px solid transparent;
-				border-right: 52px solid transparent;
+				border-bottom: 15px solid #FFC48C;
+				border-left: 26px solid transparent;
+				border-right: 26px solid transparent;
 			}
 			.hex .middle {
 				background: #FFC48C;
-				font-size: 60px;
-				height: 60px;
+				font-size: 30px;
+				height: 30px;
 				position: relative;
-				width: 104px;
+				width: 52px;
 			}
 			.hex .bottom {
-				border-left: 52px solid transparent;
-				border-right: 52px solid transparent;
-				border-top: 30px solid #FFC48C;
+				border-left: 26px solid transparent;
+				border-right: 26px solid transparent;
+				border-top: 15px solid #FFC48C;
 				width: 0;
 			}
 			.hex-row {
 				clear: left;
 			}
 			.hex-row.even {
-				margin-left: 53px;
+				margin-left: 26.5px;
 			}
 		</style>
-		<div style='float: left; width: 400px;'>
+		<div style='float: left;'>
 			<div class='hex-row'>
 				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
 				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
