--- a/src/main/html/hex1.html
+++ b/src/main/html/hex1.html
@@ -15,27 +15,27 @@ reference: https://jtauber.github.io/articles/css-hexagon.html
 			}
 			.hex {
 				float: left;
-				margin: 0px -26px -50px 0px;
+				margin: 0px -13px -25px 0px;
 			}
 			.hex .left {
-				border-bottom: 52px solid transparent;
-				border-right: 30px solid #FFC48C;
-				border-top: 52px solid transparent;
+				border-bottom: 26px solid transparent;
+				border-right: 15px solid #FFC48C;
+				border-top: 26px solid transparent;
 				float: left;
 				width: 0;
 			}
 			.hex .middle {
 				background: #FFC48C;
 				float: left;
-				font-size: 60px;
-				height: 104px;
+				font-size: 30px;
+				height: 52px;
 				position: relative;
-				width: 60px;
+				width: 30px;
 			}
 			.hex .right {
-				border-bottom: 52px solid transparent;
-				border-left: 30px solid #FFC48C;
-				border-top: 52px solid transparent;
+				border-bottom: 26px solid transparent;
+				border-left: 15px solid #FFC48C;
+				border-top: 26px solid transparent;
 				float: left;
 				width: 0;
 			}
@@ -43,11 +43,11 @@ reference: https://jtauber.github.io/articles/css-hexagon.html
 				clear: left;
 			}
 			.hex.even {
-				margin-top: 53px;
+				margin-top: 26.5px;
 			}
 		</style>
 
-		<div style='float: left; width: 400px;'>
+		<div style='float: left;'>
 			<div class='hex-row'>
 				<div class='hex'><div class='left'></div><div class='middle'></div><div class='right'></div></div>
 				<div class='hex even'><div class='left'></div><div class='middle'></div><div class='right'></div></div>
