--- a/src/main/html/hex0.html
+++ b/src/main/html/hex0.html
@@ -9,7 +9,7 @@ reference: https://jtauber.github.io/articles/css-hexagon.html
 	<head>
 	</head>
 	<body>
-		<style>di
+		<style>
 			body {
 				font-family: monospace;
 			}
@@ -17,47 +17,40 @@ reference: https://jtauber.github.io/articles/css-hexagon.html
 				float: left;
 				margin: 0px 0px -13px 1.5px;
 			}
-			.hex .top {
-				width: 0;
-				border-bottom: 15px solid #FFC48C;
-				border-left: 26px solid transparent;
-				border-right: 26px solid transparent;
-			}
 			.hex .middle {
-				background: #FFC48C;
 				font-size: 30px;
 				height: 30px;
 				position: relative;
 				width: 52px;
 			}
-			.hex .bottom {
+			.hex .part {
 				border-left: 26px solid transparent;
 				border-right: 26px solid transparent;
-				border-top: 15px solid #FFC48C;
 				width: 0;
 			}
 			.hex-row {
 				clear: left;
 			}
-			.hex-row.even {
-				margin-left: 26.5px;
-			}
 		</style>
 		<div style='float: left;'>
-			<div class='hex-row'>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
+			<div class='hex-row' style='margin-left: 0px'>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
 			</div>
-			<div class='hex-row even'>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'><span style='left: 50%; position: absolute; top: 50%; transform: translate(-50%, -50%);'>🌲</span></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
+			<div class='hex-row' style='margin-left: 26.5px'>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
+				<div class='hex'>
+					<div class='part' style='border-bottom: 15px solid #FFC48C;'></div>
+					<div class='middle' style='background: #FFC48C'><span style='left: 50%; position: absolute; top: 50%; transform: translate(-50%, -50%);'>🌲</span></div>
+					<div class='part' style='border-top: 15px solid #FFC48C;'></div>
+				</div>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
 			</div>
-			<div class='hex-row'>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
-				<div class='hex'><div class='top'></div><div class='middle'></div><div class='bottom'></div></div>
+			<div class='hex-row' style='margin-left: 53px'>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
+				<div class='hex'><div class='part' style='border-bottom: 15px solid #FFC48C;'></div><div class='middle' style='background: #FFC48C'></div><div class='part' style='border-top: 15px solid #FFC48C;'></div></div>
 			</div>
 		</div>
 	</body>
