--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -12,6 +12,7 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row.html
 		<div id='target'></div>
 	</body>
 
+	<script src='five-in-a-row.js'></script>
 	<script src='frp.js'></script>
 	<script src='fun.js'></script>
 	<script src='pq.js'></script>
@@ -73,7 +74,7 @@ let view = rd.parse(`
 				</rd_for>
 			</table>
 		</rd_map>
-		<!-- button rd_on_click='close()'>close</button -->
+		<!-- button rd_on_click='handleclose()'>close</button -->
 		<rd_map v='vm.notifications'>
 			<div style='background: { palette[1] }; bottom: 0; left: 0; position: fixed; text-align: center; width: 100%;'>
 				<rd_for>
@@ -87,216 +88,7 @@ let view = rd.parse(`
 let eatdirs = [[0, -1], [-1, 0], [-1, +1], [+1, +1],];
 let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1],];
 
-const usp = new URLSearchParams(window.location.search);
-const colorsp = usp.get('colors');
-const sizep = usp.get('size');
-
-let size = sizep != null ? +sizep : 7;
-let nStoneTypes = colorsp != null ? +colorsp : 5;
-let score = 0;
-
-let randomstone = () => ({ d: Math.floor(Math.random() * nStoneTypes) });
-
-let randomstones = n => {
-	let stones = [];
-	for (let i = 0; i < n; i++) stones.push(randomstone());
-	return stones;
-};
-
-let search = (xy0, xyx, isMovable) => {
-	let key = xy => `${xy.x},${xy.y}`;
-	let todos = [{ x: xy0.x, y: xy0.y, prev: null, }];
-	let dones = {};
-	let kx = key(xyx);
-	while (0 < todos.length) { // breadth-first search
-		let todo = todos.shift();
-		let { x, y, } = todo;
-		let k = key(todo);
-		if (!dones.hasOwnProperty(k)) {
-			let neighbours = neighbourdirs
-				.map(([dx, dy]) => ({ x: x + dx, y: y + dy, prev: todo, }))
-				.filter(({ x, y }) => 0 <= x && x < size && 0 <= y && y < size && isMovable(x, y));
-			todos.push(...neighbours);
-			dones[k] = todo;
-			if (k == kx) return todo;
-		}
-	}
-	return null;
-};
-
-let freeze = false; // if we are accepting game inputs
-
-let mutate = (() => {
-	let for_xy = f => {
-		for (let x = 0; x < size; x++)
-			for (let y = 0; y < size; y++)
-				f(x, y);
-	};
-	let back_xy = f => {
-		for (let x = size - 1; 0 <= x; x--)
-			for (let y = size - 1; 0 <= y; y--)
-				f(x, y);
-	};
-	let setcell = (vm, vmc1) =>  {
-		let vmt0 = vm.board;
-		let vmr0 = vmt0[vmc1.x];
-		let vmc0 = vmr0[vmc1.y];
-		let vmr1 = vmr0.map(vmc => vmc != vmc0 ? vmc : vmc1);
-		let vmt1 = vmt0.map(vmr => vmr != vmr0 ? vmr : vmr1);
-		return { ...vm, board: vmt1 };
-	};
-	return {
-		back_xy,
-		drop: (vm, stones) => {
-			if (stones.length <= mutate.emptycount(vm))
-				for (let stone of stones)
-					while(true) {
-						let x = Math.floor(Math.random() * size);
-						let y = Math.floor(Math.random() * size);
-						if (vm.board[x][y].d == null) {
-							vm = setcell(vm, { ...vm.board[x][y], d: stone.d });
-							break;
-						}
-					}
-			else
-				vm = mutate.lose(vm);
-			return vm;
-		},
-		emptycount: vm => {
-			let n = 0;
-			for_xy((x, y) => n += vm.board[x][y].d != null ? 0 : 1);
-			return n;
-		},
-		for_xy,
-		lose: vm => {
-			freeze = true;
-			for_xy((x, y) => {
-				if (vm.board[x][y].d == null)
-					vm = setcell(vm, { ...vm.board[x][y], d: -1 });
-			});
-			return vm;
-		},
-		setcell,
-	};
-})();
-
-let vw = (() => {
-	let select_xy = null;
-	let change = f => renderAgain(view, vm0 => {
-		let vm1 = f(vm0);
-		// console.log(vm1);
-		return vm1;
-	});
-	return {
-		change,
-		init: () => change(vm0 => {
-			var vm1 = {
-				board: range(0, size).map(x => range(0, size).map(y => ({ d: null, x, y, })).list()).list(),
-				nextstones: [randomstone(), randomstone(), randomstone(),],
-				notifications: ['welcome!'],
-			};
-			return mutate.drop(vm1, randomstones(Math.ceil(size * size * .3)));
-		}),
-		select: (x, y) => {
-			change(vm => {
-				let vmc = vm.board[x][y];
-				return mutate.setcell(vm, { ...vmc, selected: true, });
-			});
-			select_xy = { x, y };
-		},
-		unselect: () => {
-			let select_xy0 = select_xy;
-			change(vm => {
-				let vmc = vm.board[select_xy.x][select_xy.y];
-				return mutate.setcell(vm, { ...vmc, selected: false, });
-			});
-			select_xy = null;
-			return select_xy0;
-		},
-	}
-})();
-
-let check = () => {
-	let isFiveInARow = false;
-	if (!freeze)
-		vw.change(vm => {
-			for (let [dx, dy] of eatdirs)
-				(0 < dx * size + dy ? mutate.for_xy : mutate.back_xy)((x, y) => {
-					let step = 0;
-					let x1, y1;
-					while (true
-						&& (x1 = x + step * dx) != null
-						&& (y1 = y + step * dy) != null
-						&& 0 <= x1 && x1 < size && 0 <= y1 && y1 < size
-						&& vm.board[x][y].d != null
-						&& vm.board[x][y].d == vm.board[x1][y1].d) step++;
-					if (5 <= step) {
-						isFiveInARow = true;
-						for (let i = 0; i < step; i++)
-							vm = mutate.setcell(vm, { ...vm.board[x + i * dx][y + i * dy], d: null, });
-						score += step;
-						document.title = `${score} - Five in a row`;
-					}
-				});
-			return vm;
-		});
-	return isFiveInARow;
-};
-
-let move = (vm, vmc0, vmcx) => {
-	let node = search(vmc0, vmcx, (x, y) => vm.board[x][y].d == null);
-	let rec = ({ x, y, prev, }, cb) => {
-		if (prev != null)
-			rec(prev, () => {
-				let timeout = setTimeout(() => {
-					vw.change(vm => {
-						let vmc0 = vm.board[prev.x][prev.y];
-						let vmc1 = vm.board[x][y];
-						let d = vmc0.d;
-						vm = mutate.setcell(vm, { ...vmc0, d: null, });
-						vm = mutate.setcell(vm, { ...vmc1, d, });
-						return vm;
-					});
-					cb();
-					clearTimeout(timeout);
-				}, 50);
-			});
-		else
-			cb();
-	};
-	if (node != null) {
-		freeze = true;
-		rec(node, () => {
-			freeze = false;
-			if (!check()) {
-				vw.change(vm => {
-					vm = mutate.drop(vm, vm.nextstones);
-					return { ...vm, nextstones: randomstones(3), };
-				});
-				check();
-			}				
-		});
-	} else
-		console.log('no path between', vmc0, vmcx);
-};
-
-let handleclick = (vmc, ev) => {
-	if (!freeze) {
-		let select_xy0 = vw.unselect();
-
-		if (vmc.d != null)
-			vw.select(vmc.x, vmc.y);
-		else if (select_xy0 != null) {
-			let vm_;
-			vw.change(vm => vm_ = vm);
-			move(vm_, select_xy0, vmc);
-		}
-	}
-};
-
 vw.init();
-
-close = () => vw.change(vm => null);
 
 	</script>
 </html>
