--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -70,7 +70,7 @@ let viewCell = rd.parse(`
 `);
 
 let viewCells = rd.parse(`
-	<div class='hex-row' style='margin-left: { vm[0].x * 26.5 }px'>
+	<div class='hex-row' style='margin-left: { (vm[0].x + vm[0].y) * 26.5 }px'>
 		<rd_for>
 			<rd_component v='viewCell' />
 		</rd_for>
