--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -7,6 +7,7 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-hex-rects.html
 	<head>
 		<title>0 - Five in a row</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css?family=Oswald:200&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id='target'></div>
@@ -59,10 +60,17 @@ let viewCells = rd.parse(`
 `);
 
 let view = rd.parse(`
-	<span>
-		<rd_map v='vm.nextstones'>
-			<rd_component v='viewCells' />
-		</rd_map>
+	<span style='display: flex; flex-direction: column;'>
+		<span style='align-items: center; display: flex; justify-content: space-between;'>
+			<span style='justify-content: flex-start;'>
+				<rd_map v='vm.nextstones'>
+					<rd_component v='viewCells' />
+				</rd_map>
+			</span>
+			<span style='justify-content: flex-end;'>
+				<span style='font-family: Oswald, monospace;'>{ vm.score }</span>
+			</span>
+		</span>
 		<p/>
 		<rd_map v='vm.board'>
 			<rd_for>
