--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -76,7 +76,7 @@ let view = rd.parse(`
 		</span>
 		<p/>
 		<rd_map v='vm.board'>
-			<table style='user-select: none;'>
+			<table style='border-spacing: 0; user-select: none;'>
 				<rd_for>
 					<rd_component v='viewCells' />
 				</rd_for>
