--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -102,7 +102,7 @@ let view = rd.parse(`
 `);
 
 let eatdirs = [[0, -1], [-1, 0], [-1, +1], ];
-let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, +1,], [+1, -1,], ];
+let movedirs = [[-1, 0], [+1, 0], [0, -1], [0, +1], [-1, +1,], [+1, -1,], ];
 
 vw.init();
 
