--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -94,7 +94,7 @@ let view = rd.parse(`
 `);
 
 let eatdirs = [[0, -1], [-1, 0], [-1, +1], [+1, +1],];
-let neighbourdirs = [[-1, 0], [+1, 0], [0, -1], [0, +1],];
+let movedirs = [[-1, 0], [+1, 0], [0, -1], [0, +1],];
 
 vw.init();
 
