--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -36,9 +36,9 @@ icons[-1] = '💀';
 let viewCell = rd.parse(`
 	<span draggable='true'
 		style='
-			background: { vm.background ? vm.background : "#DDDDDD" };
+			background: { vm.selected ? palette[2] : "#DDDDDD" };
 			display: inline-block;
-			filter: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
+			filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
 			font-size: 25px;
 			height: 40px;
 			margin: 2px 0px 2px 0px;
