--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -86,9 +86,7 @@ let view = rd.parse(`
 					<rd_component v='viewCells' />
 				</rd_map>
 			</span>
-			<span>
-				<span style='font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
-			</span>
+			<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
 		</span>
 		<span>
 			<img height='100' />
