--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -70,9 +70,7 @@ let view = rd.parse(`
 					</table>
 				</rd_map>
 			</span>
-			<span>
-				<span style='font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
-			</span>
+			<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
 		</span>
 		<p/>
 		<rd_map v='vm.board'>
