--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -67,9 +67,7 @@ let view = rd.parse(`
 					<rd_component v='viewCells' />
 				</rd_map>
 			</span>
-			<span>
-				<span style='font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
-			</span>
+			<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
 		</span>
 		<p/>
 		<rd_map v='vm.board'>
